[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Payment/UI/theme.tres" type="Theme" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 0.945098, 1, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Purchase_Button" type="Button" parent="."]
margin_left = 33.0
margin_top = 23.0
margin_right = 968.0
margin_bottom = 127.0
disabled = true
text = "This button will be enable if you pay!"

[node name="Pay_Button" type="Button" parent="."]
margin_left = 33.0
margin_top = 152.0
margin_right = 968.0
margin_bottom = 256.0
text = "In App Purchase by Cryptocurrency"

[node name="About_Button" type="Button" parent="."]
margin_left = 33.0
margin_top = 280.0
margin_right = 968.0
margin_bottom = 384.0
text = "About"

[node name="Exit_Button" type="Button" parent="."]
margin_left = 33.0
margin_top = 459.0
margin_right = 968.0
margin_bottom = 563.0
text = "Exit"

[connection signal="visibility_changed" from="." to="." method="_on_Main_visibility_changed"]
[connection signal="pressed" from="Pay_Button" to="." method="_on_Pay_Button_pressed"]
[connection signal="pressed" from="About_Button" to="." method="_on_About_Button_pressed"]
[connection signal="pressed" from="Exit_Button" to="." method="_on_Exit_Button_pressed"]
